# massdns

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  buffers.c  buffers.h  dns.h  flow.h  hashmap.h  list.h  main.c  massdns.h  mixed_list.h  module.h  net.h  resolvers.txt  security.h  string.h  timed_ring.h
.github/workflows/: main.yml
doc/: massdns.1
lists/: resolvers.txt
modules/binary_output/: CMakeLists.txt  Makefile  main.c
scripts/: auth-addrs.sh  censys-extract.py  ct.py  dnsparse.py  get-resolvers.py  get-resolvers.sh  massdnsA.jq  massdnsAAAA.jq  ptr.py  recon.py  requirements.txt  subbrute.py
src/: auto_concurrency.h  buffers.h  cmd.h  dns.h  flow.h  hashmap.h  list.h  main.c  massdns.h  module.h  net.h  random.h  security.h  string.h  tcp.h  timed_ring.h
tests/: fuzz-server.py  run-tests.sh
tests/ignore-code-test-json/: names.txt  run.sh
tests/multi-lookup-A-ipv4-dedicated-resolver/: expected  names.txt  run.sh
tests/single-lookup-A-ipv4-dedicated-resolver/: expected  names.txt  run.sh
tests/single-lookup-A-ipv4-resolver/: expected  names.txt  run.sh
tests/single-lookup-A-ipv4-resolver-pipe/: run.sh
tests/single-lookup-A-ipv6-resolver/: expected  google-dns.txt  run.sh
